2001-08-11  Thorsten Kukuk  <kukuk@suse.de>

	* ypserv/ypserv.c (main): Fix missing format string, only
	  change database directory if we are in debug mode.

2001-08-07  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.0

2001-08-06  Thorsten Kukuk  <kukuk@suse.de>

	* scripts/Makefile.am (varyp_SCRIPTS): Add ypMakefile
	* configure.in: Create scripts/ypMakefile

2001-08-05  Thorsten Kukuk  <kukuk@suse.de>

	* lib/ypserv_conf.c (load_ypserv_conf):

	* etc/netgroup.5: Add comment about non existing getnetgrent manual
	  page.

	* scripts/ypMakefile.in: Implement 'MINUID' for shadow map.

	* rpc.ypxfrd/ypxfrd.c (closedown): Removed external svs_fdset
	  declaration.
	Patches from Miquel van Smoorenburg <miquels@cistron.nl>)

	* yphelper/yphelper.c (print_maps): Make a copy of gethostbyname
	  result (we call gethostbyname later again) and fix a minor memory
	  leak. Based on patch by Richard Gooch <rgooch@atnf.csiro.au>

2001-04-08  Thorsten Kukuk  <kukuk@suse.de>

	* scripts/Makefile.am: Add ypinit script and manual page
	* scripts/ypinit.in: New.
	* scripts/ypinit.8.in: New.
	* scripts/create_printcap.in: New.
	* scripts/match_printcap.in: New.
	* scripts/pwupdate.8.in: New.
	* scripts/pwupdate.in: New.
	* mknetid/mknetid.c: New.
	* mknetid/mknetid.h: New.
	* mknetid/netid_hash.c: New.
	* rpc.ypxfrd: New.
	* rpc.yppasswdd: New.

2001-03-25  Thorsten Kukuk  <kukuk@suse.de>

	* configure.in: Create revnetgroup/yphelper Makefile
	* Makefile.am (SUBDIRS): Add revnetgroup and yphelper directory.
	* revnetgroup/Makefile.am: New.
	* revnetgroup/revnetgroup.c: New.
	* revnetgroup/revnetgroup.8: New.
	* revnetgroup/getnetgrent.c: New.
	* revnetgroup/hash.c: New.
	* yphelper/yphelper.c: New.
	* yphelper/yphelper.8: New.

	* ypxfr/ypxfr.c (ypxfr): Check return value from NIS server for
	  yp_order call.

	* lib/ypserv_conf.c (load_ypserv_conf): Don't free buffer
	  allocated with alloca, use stpcpy instead of sprintf.

2001-03-11  Thorsten Kukuk  <kukuk@suse.de>
