@@ -87,7 +87,7 @@ fi
 AC_SUBST(MAKE)
 
 dnl Check for aliases path
-AC_PATH_PROG(MAIL_ALIASES, aliases, /etc/mail/aliases, /etc/mail:/etc)
+AC_PATH_PROG(ALIASES, aliases, /etc/mail/aliases, /etc/mail:/etc)
 
 dnl Should we use a gethostbyname after gethostname to use FQDN ? default yes
 AC_ARG_ENABLE(fqdn,
