@@ -1,3 +1,9 @@
+2001-08-12  Thorsten Kukuk  <kukuk@suse.de>
+
+	* configure.in: Rename variable MAIL_ALIASES to ALIASES.
+	* lib/Makefile.am: Install ypxfrd.h into include/rpcsvc.
+	* scripts/ypMakefile.in: Fix makedbm path.
+
 2001-08-11  Thorsten Kukuk  <kukuk@suse.de>
 
 	* ypserv/ypserv.c (main): Fix missing format string, only
